src/test/deca/context/invalid/class25.deca
class A{
    int a;
    "nothing";
} 
{
    A a=new A();
    
}